hphp/test/zend/good/tests/classes/bug27504.php.expectf
Called function foo:bar(1)

Warning: Invalid argument: function: method 'bar' not found in %s/bug27504.php on line 13

Fatal error: Call to private foo::bar() from invalid context in %s/bug27504.php on line 15
